--- a/src/base.css
+++ b/src/base.css
@@ -8,3 +8,12 @@ td {
 	height: 100px;
 	overflow-wrap: break-word;
 }
+
+/* Renderer things */
+
+.renderer {
+	image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-crisp-edges;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
+}
