Make inputs not stick until key unpress

--- a/src/base.css
+++ b/src/base.css
@@ -16,4 +16,5 @@ td {
   image-rendering: -webkit-crisp-edges;
   image-rendering: pixelated;
   image-rendering: crisp-edges;
+	image-rendering: optimizeSpeed;
 }
