Rewrite the renderer class

--- a/gamePlayer/src/base.css
+++ b/gamePlayer/src/base.css
@@ -89,7 +89,7 @@ select {
 
 /* Renderer things */
 
-.renderer {
+#viewportCanvas {
 	image-rendering: -moz-crisp-edges;
 	image-rendering: -webkit-crisp-edges;
 	image-rendering: pixelated;
