Don't allow button text to be selected

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -71,6 +71,7 @@ button {
 		--button-low-color: hsl(var(--theme-color-huesat) 13%);
 		color: var(--text-color-disabled);
 	}
+	user-select: none;
 }
 
 /* Tooltip */
