--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -279,7 +279,7 @@ kbd {
 
 .sidebar {
 	border-radius: 0px;
-	width: min(20%, 150px);
+	width: 8em;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
@@ -307,7 +307,7 @@ kbd {
 				height: 35%;
 				left: 12%;
 				width: 75%;
-				font-size: 2.3em;
+				font-size: 2em;
 				color: var(--icon-color);
 				text-align: center;
 				user-select: none;
