--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -108,7 +108,7 @@ dialog {
 	}
 }
 
-table#levelList {
+table {
 	width: 100%;
 	border-spacing: 0;
 
@@ -129,6 +129,11 @@ table#levelList {
 			}
 			cursor: pointer;
 			td {
+				input[type="radio"] {
+					display: block;
+					margin-left: auto;
+					margin-right: auto;
+				}
 				padding: 0.5em;
 				&.levelN {
 					text-align: right;
@@ -137,6 +142,12 @@ table#levelList {
 			}
 		}
 	}
+}
+
+.tsetPreviewCanvas {
+	width: 100%;
+	height: 100%;
+	width: calc(5 * 32px);
 }
 
 dialog.textDialog section {
