Don't allow the set list items in a small grid to take up more space than they should

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -649,7 +649,7 @@ canvas {
 		gap: 1em;
 		grid: auto-flow / repeat(
 				auto-fit,
-				minmax(calc(var(--standard-tile-size) * 10 + 0.75em * 2), 1fr)
+				calc(var(--standard-tile-size) * 10 + 0.75em * 2)
 			);
 		li {
 			list-style: none;
