Add a text shadow to the viewport overlay headings

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -563,6 +563,7 @@ canvas {
 			text-align: center;
 			font-size: 300%;
 			margin: 0;
+			text-shadow: black 1px 0px 10px;
 		}
 		.statsContainer {
 			grid-area: middle;
