Use percent-based values to not offset the rainbow sun when the last level was 9x9

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -548,8 +548,8 @@ canvas {
 	&[data-gz] {
 		background-image: radial-gradient(transparent, var(--general-bg) 70%),
 			repeating-radial-gradient(#f00, #ff0, #0f0, #0ff, #00f, #f0f, #f00 30%);
-		background-position-x: calc(var(--tile-size) * -5);
-		background-position-y: calc(var(--tile-size) * -8.5);
+		background-position-x: 50%;
+		background-position-y: 80%;
 		background-size: 200% 200%;
 
 		#overlayGzContents {
