--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -454,11 +454,11 @@ kbd {
 		width: calc(var(--tile-size) * var(--level-camera-width));
 		height: calc(var(--tile-size) * var(--level-camera-height));
 	}
-	#levelViewportCanvas {
+	.viewportCanvas {
 		width: 100%;
 		height: 100%;
 	}
-	#levelInventoryCanvas {
+	.inventoryCanvas {
 		grid-area: inventory;
 		margin: auto;
 		width: calc(var(--tile-size) * 4);
