--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -607,8 +607,12 @@ canvas {
 		grid-area: viewport;
 	}
 	.movesContainer {
+		height: 0;
+		min-height: 100%;
+		box-sizing: border-box;
 		.movesArea {
 			.container();
+			overflow-y: auto;
 			width: 100%;
 			height: 100%;
 			resize: none;
