Add an about dialog

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -182,6 +182,16 @@ table {
 
 dialog.textDialog section {
 	padding-left: 1em;
+	padding-right: 1em;
+	.small {
+		font-size: 0.8em;
+	}
+}
+
+#aboutDialog section {
+	ul li {
+		margin-top: 0.5em;
+	}
 }
 
 #themeSelectorDialog .preferences {
