Replace all native `alert`s with HTML dialogs

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -183,6 +183,8 @@ table {
 dialog.textDialog section {
 	padding-left: 1em;
 	padding-right: 1em;
+	padding-top: 0.25em;
+	padding-bottom: 0.25em;
 	.small {
 		font-size: 0.8em;
 	}
