Fix title and icon level N line heights for Firefox

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -496,6 +496,7 @@ kbd {
 				text-align: center;
 				user-select: none;
 				pointer-events: none;
+				line-height: 1.2;
 			}
 		}
 	}
@@ -774,6 +775,7 @@ canvas {
 		p {
 			margin: 0;
 			height: 1em;
+			line-height: 0.9;
 		}
 		h1 {
 			grid-area: title;
