Allow text breaks anywhere in the ExaCC moves list

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -744,7 +744,8 @@ canvas {
 			padding: 0;
 			background-color: var(--secondary-bg);
 			font-family: monospace;
-			word-break: break-all;
+			overflow-wrap: anywhere;
+			line-break: anywhere;
 		}
 		grid-area: moves;
 	}
