Allow choosing different time rounding modes for ExaCC

--- a/gamePlayer/src/NCCTK.less
+++ b/gamePlayer/src/NCCTK.less
@@ -294,8 +294,11 @@ dialog.textDialog section {
 			margin-top: 0.75em;
 		}
 	}
-	p {
+	p,
+	ul {
 		font-size: 0.8em;
+	}
+	p {
 		width: 70%;
 	}
 }
