--- a/gamePlayer/src/index.css
+++ b/gamePlayer/src/index.css
@@ -14,6 +14,6 @@
 
 @layer components {
 	.box {
-		@apply rounded-md bg-blue-900 p-2 shadow-lg;
+		@apply bg-theme-900 rounded-md p-2 shadow-lg;
 	}
 }
