--- a/gamePlayer/src/index.css
+++ b/gamePlayer/src/index.css
@@ -20,4 +20,14 @@
 	.box {
 		@apply bg-theme-900 rounded-md p-2 shadow-lg;
 	}
+	button {
+		@apply cursor-auto appearance-none border-2 border-b-[--low-color] border-l-[--high-color] border-r-[--low-color] border-t-[--high-color] bg-gradient-to-b from-[--high-color] to-[--low-color] px-2;
+		@apply [--high-color:theme(colors.theme.600)] [--low-color:theme(colors.theme.700)];
+	}
+	button:hover {
+		@apply [--high-color:theme(colors.theme.500)] [--low-color:theme(colors.theme.600)];
+	}
+	button:active {
+		@apply [--high-color:theme(colors.theme.700)] [--low-color:theme(colors.theme.800)];
+	}
 }
