--- a/gamePlayer/src/index.css
+++ b/gamePlayer/src/index.css
@@ -21,7 +21,7 @@
 		@apply underline;
 	}
 	.box {
-		@apply bg-theme-900 rounded-md p-2 shadow-lg;
+		@apply bg-theme-900 border-theme-800 rounded-md border-2 p-2 shadow-lg;
 	}
 	button {
 		@apply cursor-auto appearance-none border-2 border-b-[--low-color] border-l-[--high-color] border-r-[--low-color] border-t-[--high-color] bg-gradient-to-b from-[--high-color] to-[--low-color] px-2;
